css/boardgame.css
.boardgame {
  font-family: Arial, "Liberation Sans", sans-serif;
  position: relative;
  overflow: hidden;
  width: 100%;
  height: 100%;
  box-shadow: 0 0 0.75em #7f7f7f;
  background: #f0f0f0;
}
.hotspot {
  position: absolute;
  z-index: 2;
  cursor: pointer;
}
.hotspot.h5p-default {
  border-radius: 1em;
  box-shadow: 0 0 0.5em #7f7f7f;
  border: 1px solid #f0f0f0;
  width: 2em;
  height: 2em;
  background: #4995e3;
  background: -moz-linear-gradient(top, #67a6e7, #4085cd);
  background: -webkit-linear-gradient(top, #67a6e7, #4085cd);
  background: -o-linear-gradient(top, #67a6e7, #4085cd);
  background: -ms-linear-gradient(top, #67a6e7, #4085cd);
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#67a6e7', endColorstr='#4085cd',GradientType=0);
}
.action-container {
  position: relative;
  z-index: 300;
  width: 100%;
  height: 100%;
  background: rgba(255, 255, 255, 0.8);
}
.progress {
  position: absolute;
  z-index: 201;
  background: no-repeat;
}
.boardgame-intro {
  position: absolute;
  left: 0;
  width: 100%;
  z-index: 200;
  background: rgba(255, 255, 255, 0.9);
  color: #2d2c28;

  -webkit-transition: bottom 0.5s;
  -moz-transition: bottom 0.5s;
  -o-transition: bottom 0.5s;
  transition: bottom 0.5s;
}

.boardgame-intro.open {
  bottom: 0;
  z-index: 202;
}

.bgi-content > h1 {
  color: white;
  background: rgba(119, 134, 162, 0.8);
  text-shadow: 0 0 1em #1e2633;
  box-shadow: 0 0 0.5em #7f7f7f;
  border-top: 1px solid #f0f0f0;
  border-bottom: 1px solid #f0f0f0;
  font-size: 2em;
  line-height: 2.5em;
  margin: 0;
  padding: 0 1em;
  text-align: center;
}

.bgi-content > p {
  margin: 1em 3em;
  font-size: 24px;
  line-height: 28px;
  color: #2d2c28;
}

.bgi-content .buttons {
  position: relative;
  text-align: right;
  bottom: 20px;
  right: 0;
  font-size: 150%;
  padding: 10px 30px;
}

.boardgame .button {
  cursor: pointer;
  color: #2d2c28;

  font-size: 16px;
  padding: 11px 16px;
  text-align: center;

  border: 1px solid #808080;
  border-radius: 4px;

  background: #ffffff; /* Old browsers */
  background: -moz-linear-gradient(top,  #ffffff 0%, #e0e0e0 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* IE10+ */
  background: linear-gradient(to bottom,  #ffffff 0%,#e0e0e0 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
}

.boardgame .button:hover {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #ffffff 0%, #e3f5ab 47%, #c2ef6e 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(47%,#e3f5ab), color-stop(100%,#c2ef6e)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #ffffff 0%,#e3f5ab 47%,#c2ef6e 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #ffffff 0%,#e3f5ab 47%,#c2ef6e 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #ffffff 0%,#e3f5ab 47%,#c2ef6e 100%); /* IE10+ */
  background: linear-gradient(to bottom,  #ffffff 0%,#e3f5ab 47%,#c2ef6e 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#c2ef6e',GradientType=0 ); /* IE6-9 */
}

.boardgame .button.skip {
  position: absolute;
  top: 15px;
  right: 15px;
  z-index: 501;
}

.video-container {
  position: absolute;
  width: 100%;
  height: 100%;
  background: #000;
  z-index: 500;
}

/* Questionset styles */
.questionset {
  background: rgba(255,255,255,.9);
  position: absolute;
  width: 90%;
  height: 90%;
  top: 5%;
  left: 5%;
  box-shadow: 0 0 0.625em 0 #515151;

  -webkit-transition: top 1s, left 1s, -webkit-transform 1s;
  -moz-transition: top 1s, left 1s, -moz-transform 1s;
  -o-transition: top 1s, left 1s, -o-transform 1s;
  transition: top 1s, left 1s, transform 1s;
}

.questionset.hidden {
  -webkit-transform: rotate(-45deg);
  -moz-transform: rotate(-45deg);
  -o-transform: rotate(-45deg);
  transform: rotate(-45deg);
  top: 150%;
  left: 50%;
}

.questionset > .title {
  margin: 1em;
}
.questionset > .question-container {
  margin: 1em;
  max-height: 70%;
  overflow-y: auto;
}

#action-container > .intro-page {
  position: absolute;
  top: 5%;
  left: 5%;
  width: 90%;
  max-height: 90%;
  background: rgba(255,255,255,.9);
  box-shadow: 0 0 10px 0 #515151;
}
.qs-footer {
  width: 100%;
  position: absolute;
  bottom: 0;
}

.qs-footer > .button {
  margin: 1em;
}
.qs-footer > .button.next, .qs-footer > .button.finish {
  float: right;
}
.qs-footer > .button.prev {
  float: left;
}
.questionset-results {
  position: absolute;
  background-color: rgba(255, 255, 255, 0.9);
  top: 5%;
  left: 5%;
  width: 90%;
  height: 90%;
  box-shadow: 0 0 10px 0 #515151;
}

/* Multichoice styles */
.multichoice label {
  cursor: pointer;
  display: block;
  padding: 8px 15px;
  overflow: hidden;
  color: black;
}
.boardgame .multichoice .answer {
  margin: 5px 0;
  padding: 0;
  border: 1px solid #808080;
  border-radius: 4px;
  background: #ffffff; /* Old browsers */
  background: -moz-linear-gradient(top,  #ffffff 0%, #e0e0e0 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(100%,#e0e0e0)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #ffffff 0%,#e0e0e0 100%); /* IE10+ */
  background: linear-gradient(to bottom,  #ffffff 0%,#e0e0e0 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e0e0e0',GradientType=0 ); /* IE6-9 */
}
.boardgame .multichoice .answer.selected {
  background: #dddddd; /* Old browsers */
  background: -moz-linear-gradient(top,  #ffffff 0%, #D3DBF5 47%, #B2BEEF 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(47%,#D3DBF5), color-stop(100%,#B2BEEF)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #ffffff 0%, #D3DBF5 47%, #B2BEEF 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #ffffff 0%, #D3DBF5 47%, #B2BEEF 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #ffffff 0%,#D3DBF5 47%, #B2BEEF 100%); /* IE10+ */
  background: linear-gradient(to bottom, #FFFFFF 0%, #D3DBF5 47%, #B2BEEF 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#B2BEEF',GradientType=0 ); /* IE6-9 */
}
.multichoice .answer input {
  /* Display: none does not work in IE. (at least 8).
     A none'd checkbox cannot be clicked even by its label. */
  display: block;
  position: absolute;
  left: -9999px;
}

